@@ -2,7 +2,6 @@ package de.muenchen.refarch.integration.dms.application.usecase;
 
 import de.muenchen.refarch.integration.dms.application.port.out.SearchSubjectAreaOutPort;
 import de.muenchen.refarch.integration.dms.application.port.in.SearchSubjectAreaInPort;
-import de.muenchen.oss.digiwf.message.process.api.error.BpmnError;
 import de.muenchen.refarch.integration.dms.domain.exception.DmsException;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
@@ -20,10 +19,10 @@ public class SearchSubjectAreaUseCase implements SearchSubjectAreaInPort {
         val subjectAreas = searchSubjectAreaOutPort.searchSubjectArea(searchString, user);
 
         if (subjectAreas.isEmpty()) {
-            throw new BpmnError("OBJECT_NOT_FOUND", String.format("Subject Area not found with searchString %s and user %s", searchString, user));
+            throw new DmsException("OBJECT_NOT_FOUND", String.format("Subject Area not found with searchString %s and user %s", searchString, user));
         }
 
         // return first result
-        return subjectAreas.get(0);
+        return subjectAreas.getFirst();
     }
 }
